<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SWD</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="strstatus">Program is running &#8230;</string>
	<string name="strimage">image</string>
	<string name="strconnectedto">Connected To:</string>
	<string name="strRunBackground">Running in Background:</string>
	<string name="strkill">Exit</string>
    <string name="DeviceName">Feri MacBook</string>
		
</resources>
